--- a/volumes/appendices/glossary.qmd
+++ b/volumes/appendices/glossary.qmd
@@ -1,8 +1,57 @@
 # Glossary of Traditional Terms
 
-> [!NOTE]
-> Definitions of key terms.
+## A
 
-## Under Construction
+**Alcocoden**: The "Giver of Years." A planet bound to the Hyleg that determines the potential lifespan of the native.
 
-This chapter is currently being drafted.
+**Almuten**: The "Winner" or "Victor." The planet that possesses the most essential and accidental dignity at a specific degree or in a chart.
+
+**Anareta**: The "Killing Planet" or "Destroyer." A planet (usually a malefic) that threatens the life of the native when directing to the Hyleg.
+
+## B
+
+**Besiegement**: A condition where a planet is placed between two malefics (Mars and Saturn) without the protection of a benefic aspect.
+
+**Bonification**: The process by which a planet is strengthened or "improved" by the aspect or reception of a benefic.
+
+## C
+
+**Cazimi**: "In the Heart of the Sun." A planet located within 17 minutes of arc of the Sun. It is considered immensely strengthened.
+
+**Chronocrator**: "Time-Lord." A planet that rules a specific period of the native's life (e.g., in Firdaria or Zodiacal Releasing).
+
+**Combustion**: A debilitating condition where a planet is within 8.5 degrees of the Sun, being burned by its rays.
+
+## D
+
+**Doryphory**: "Spearbearer." A planet that rises before the Sun (in a day chart) or Moon (in a night chart), acting as a bodyguard.
+
+**Dodecatemoria**: A 12th-part subdivision of a zodiacal sign.
+
+## H
+
+**Hayz**: A condition of superior dignity where a diurnal planet is in a diurnal sign and above the horizon during the day (or nocturnal equivalent).
+
+**Hyleg**: The "Giver of Life." A specific planet or point (such as the Sun, Moon, or Ascendant) that carries the vital force of the native.
+
+## M
+
+**Maltreatment**: Conditions that harm a planet, such as combustion, opposition to malefics, or being in the 6th, 8th, or 12th house.
+
+**Monomoiria**: The ruler of an individual degree of the zodiac.
+
+## P
+
+**Profection**: A timing technique that moves the Ascendant (and other points) forward by one sign per year to determine the Lord of the Year.
+
+**Peregrine**: A planet that lacks any essential dignity (no rulership, exaltation, triplicity, term, or face) in its current position.
+
+## S
+
+**Sect**: The division of planets into two teams: Diurnal (Sun, Jupiter, Saturn) and Nocturnal (Moon, Venus, Mars).
+
+## T
+
+**Thema Mundi**: The mythical birth chart of the universe, with Cancer rising, Sun in Leo, etc., used as the rationale for planetary rulerships.
+
+**Triplicity**: A group of three signs of the same element (Fire, Earth, Air, Water).
