--- a/volumes/vol1-foundations/02-cosmos.qmd
+++ b/volumes/vol1-foundations/02-cosmos.qmd
@@ -1,5 +1,3 @@
-# The Architecture of the Cosmos
-
 ## Chapter 2: Mesopotamian Origins
 
 of Celestial  Omenology  
@@ -29,6 +27,7 @@ In the Enuma Anu Enlil, lunar eclipses are not general threats but targeted lega
 *   **Quadrant IV (North):** Subartu (Assyria).
 
 
+
 ## Chapter 3: The Egyptian & Hellenistic Synthesis
 
 : Decans and the Temporal Architecture  
@@ -56,3 +55,64 @@ Ptolemy’s Tetrabiblos (2nd Century CE) is arguably the most influential text i
 
 Ptolemy categorized astrology as a stochastic art (conjectural), similar to medicine. Just as a  doctor predicts the course of a disease based on symptoms but can be wrong due to  unknown variables, the astrologer predicts the temperament of a person based on celestial  causes, subject to the variables of " seed" (genetics) and "training" (environment). 9 This  naturalistic defense shielded astrology from religious and academic attacks for over a  millennium. 
 
+2.4
+
+
+## Chapter 4: The Thema Mundi
+
+: Thema Mundi, Aspect Natures, and the Philosophical Divide  Between Egyptian and Ptolemaic Terms** 
+
+The **Thema Mundi** (World Chart) is the archetypal baseline, constructed with **Cancer at  the Ascendant at 15°** and all classical planets in their domiciles. 
+
+● **Why Cancer?** This choice is rooted in late Mesopotamian (conjunctions in Cancer create  the world) and Egyptian astronomical traditions (the heliacal rising of Sirius and the Nile's  flooding coincided with Cancer rising), symbolizing emergence, nurturing, and  regeneration. 
+
+● **Aspect Nature:** The Thema Mundi geometrically encodes the nature of aspects. The  Square is Martial because Mars is in the exact square relationship to the Sun's domicile  (Leo). 
+
+● **Terms Divide:** The older **Egyptian Terms** reflect a fatalistic worldview by placing  malefics at the end of every sign (signifying inevitable decay/death). Ptolemy’s revised  Terms attempt to impose rational, philosophical order on this empirical data. **3\. Astrology Research and Analysis (Historical Origins)** 
+
+Astrology's roots are in **Mesopotamian** omen-based practice, particularly the **Enuma  Anu Enlil** (7,000 celestial omens). 
+
+● **Key Shift:** Around the 5th century BCE, the ecliptic was standardized into **twelve equal  30-degree segments**, marking the birth of the **Sign** distinct from the **Constellation**. ● **Egyptian Contribution:** Introduced the **Decans** and the **Horoskopos** (Rising  Sign/Ascendant), which anchored the universal planetary positions to a specific local  geography, leading to the creation of the 12 **Houses** (sectors of life). 
+
+Researching Ancient Astrological Datasets (Foundational Omenology)** 
+
+The **Enuma Anu Enlil** is the canonical statute book of celestial law. Its organization follows a  hierarchy of visible gods, prioritizing the welfare of the monarch and the stability of the state.
+
+| Tablet Range  | Deity / Phenomenon  | Domain of Influence |
+| :---- | :---- | :---- |
+| Tablets 1–13  | Sin (The Moon)  | Visibility, haloes, crowns,  conjunctions |
+| Tablets 15–22  | Sin (The Eclipse)  | Lunar Eclipses: Death, Famine,  Usurpation |
+| Tablets 23–29  | Shamash (The Sun)  | Solar disks, colors, cloud  relations |
+| Tablets 30–39  | Shamash (Eclipse)  | Solar Eclipses: Catastrophic  geopolitical shifts |
+| Tablets 50–70  | Ishtar (The Planets)  | Planetary motion,   constellations, fixed stars |
+
+**Part II: Planetary Competency and Hierarchies of Causation5. The Binary Competency  Framework of Classical Astrology: Sect, Solar Proximity, and Bonatti's Considerations as  Deterministic Rules of Planetary Engagement** 
+
+Planets are assessed by a three-layered **jurisprudential hierarchy** determining their  "legal standing" to act. 
+
+● **Layer 1: Sect (Constitutional Fitness)**   
+○ **Diurnal (Day) Faction:** Sun, Jupiter, Saturn   
+○ **Nocturnal (Night) Faction:** Moon, Venus, Mars   
+○ **Principle:** A planet *in sect* gains constitutional authority to manifest constructively  (benefics) or with structural clarity (malefics, e.g., Saturn in a day chart offers  boundaries and wisdom). A planet *out of sect* has diminished benefic capacity or  exacerbated malefic potential. 
+
+● **Layer 2: Solar Proximity (Operational Capacity)**   
+○ **Cazimi (0°00' to 0°17'):** Enters the Sun’s heart; results in **concentrated essence** (brilliance/genius-level expression). 
+
+○ **Combustion (0°18' to 8°00'):** Caught in peripheral rays; suffers **genuine  debilitation**; worldly manifestation is obscured or distorted. 
+
+○ **Under the Sunbeams (8°01' to 17°00'):** Capacity to manifest persists but is **muted** or less visible. 
+
+● **Layer 3: Bonatti's Considerations (Final Veto)**   
+○ **Besiegement:** Trapped between two malefics *without reception*; the matter  becomes **essentially impossible** to accomplish. 
+
+○ **Void of Course Moon:** Moon forms no major aspect before changing signs; the  primary agent of manifestation is isolated, and matters signified by it **do not  proceed** ("dead file" state). 
+
+The Jurisprudential Audit Framework** 
+
+This document confirms the three-layered audit, emphasizing that this framework is the  **deterministic foundation** of classical astrology, where planets are ministers with measurable  legal standing.**7\. Astrological Hierarchies of Causation** 
+
+The central doctrine is the **absolute supremacy of the Universal Cause over the  Particular Cause.** 
+
+● **Ptolemaic Doctrine:** The part (individual natal chart) must always bow to the whole  (ambient/collective environment). 
+
+● **Universal Causes:** Celestial events that alter the fundamental elemental balance of a  region (eclipses, comets, great conjunctions). These set the **boundary conditions** for
